--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT = 8000
 CORS_ORIGIN=*
 MONGODB_URI = mongodb+srv://arindamsharma12:{your-password}@cluster0.abazy.mongodb.net
+ACCESS_TOKEN_SECRET=chai-aur-code
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=chai-aur-backend
+REFRESH_TOKEN_EXPIRY=10d
