--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,7 @@ ACCESS_TOKEN_SECRET=chai-aur-code
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=chai-aur-backend
 REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=dew9vjg8j
+CLOUDINARY_API_KEY=553739525258927
+CLOUDINARY_API_SECRET=cbPlVJuCsfqO98e1DXIbKKxOTGA
